--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <h3>Ouvir musica</h3>
 <p> A música consegue moldar sentimentos de muitas formas, serve para animar, acalmar, demonstrar amor e ódio. Gosto de ouvir musica em todos os momentos, é como sair da realidade.<br>  
  Abaixo segue uma playlist dos meus artistas favoritos </p>
- <img src="aurora.jpg" width="320"; height="320";>
- <br> <a link href="https://open.spotify.com/playlist/37i9dQZF1DZ06evO15Ttp6?si=yEuMepFaQNSmIjE-ctGcYw"> This Is AURORA no Spotify </a>
+
+ <br> <a link href="https://open.spotify.com/playlist/37i9dQZF1DZ06evO15Ttp6?si=yEuMepFaQNSmIjE-ctGcYw"><img src="aurora.jpg" width="320"; height="320";>  THIS IS SARMENTI </a>
 
 
 <h3>Sair para caminhar </h3>
