--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <p> A música consegue moldar sentimentos de muitas formas, serve para animar, acalmar, demonstrar amor e ódio. Gosto de ouvir musica em todos os momentos, é como sair da realidade.<br>  
  Abaixo segue uma playlist dos meus artistas favoritos </p>
 
- <br> <a link href="https://open.spotify.com/playlist/37i9dQZF1DZ06evO15Ttp6?si=yEuMepFaQNSmIjE-ctGcYw"><img src="aurora.jpg" width="320"; height="320";>  THIS IS SARMENTI </a>
-
+ <center> <a link href="https://open.spotify.com/playlist/37i9dQZF1DZ06evO15Ttp6?si=yEuMepFaQNSmIjE-ctGcYw"><img src="aurora.jpg" width="320"; height="320";></a>
+    </center>
 
 <h3>Sair para caminhar </h3>
 <p> Quando me sinto muito agitada, gosto de caminhar sozinha em algum lugar com muitas árvores, pois  além de acalmar os pensamentos, eu ainda consigo aliviar a agitação por meio do exercício físico </p>
