--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
  Abaixo segue uma playlist dos meus artistas favoritos </p>
 
  <center> <a link href="https://open.spotify.com/playlist/37i9dQZF1DZ06evO15Ttp6?si=yEuMepFaQNSmIjE-ctGcYw"><img src="aurora.jpg" width="320"; height="320";></a>
+     <a link href="https://open.spotify.com/playlist/37i9dQZF1DZ06evO3zuWdi"><img src="melanie.jpg" width="320"; height="320";></a>
     </center>
 
 <h3>Sair para caminhar </h3>
