--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <title>Blogzinho da Ana </title>
         <style>
             div{ 
-                background-color: black
+                background-color: black;
             }
             body{ 
-                "background-color: #3b2e52;" 
-             text="#ffffff"
+                background-color: #3b2e52;
+                color: white;
             }
         </style>
     </head>
