--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 background-color: black;
             }
             body{ 
-                background-color: #3b2e52;
+                background-color: purple;
                 color: white;
             }
         </style>
