--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
         <link rel="icon" href="PeepoGlad.png" type="image/x-icon">
         <title>Blogzinho da Ana </title>
         <style>
-            div{ 
-                background-color: black;
-            }
-            body{ 
+           body{ 
                 background-color: purple;
                 color: white;
+            } 
+            div{ 
+                background-color: black;
+                color: white;
             }
+            
         </style>
     </head>
    
