--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Blogzinho da Ana </title>
         <style>
            body{ 
-                background-color: purple;
+                background-color: rgb(80, 45, 104);
                 color: white;
             } 
             div{ 
