--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
         <title>Blogzinho da Ana </title>
         <style>
            body{ 
-                background-color: #01814B;
+                background-color: #01613B;
                 color: white;
             } 
             div{ 
                 background-color: black;
                 color: white;
                 border-radius 25px;
+                padding-left: 10px;
+                padding-top: 10px;
+                padding-bottom: 10px;
             }
             
         </style>
     </head>
    
     <body>
-        <div>
-              <br>
+        <div>          
            <center> <h1> O IF está te deixando ablublu das ideias? vem cá que eu vou tentar te ajudar!</h1></center>
           <br>Olá galera, meu nome é Ana Luiza e hoje eu vou falar um pouco sobre os meus habitos para ficar calma, tranquila, sussa, de boa na lagoa.</br>
           <p>A vida corrida de estudante chega a ser muito estressante, por isso, resolvi compartilhar um pouco dos meus habitos, talvez eles possam ser úteis para ajudar pessoas agitadas como eu.</p>
-                <br>
         </div>
     
       <h3>Fazer caça-palavras</h3>
