--- a/aaaaaa/ana.html
+++ b/aaaaaa/ana.html
@@ -11,13 +11,14 @@
  
 <center>  <h1> Um pouco sobre mim </h1> </center> 
 
-   <div>
+   <div id="texto">
     <p> Meu nome é Ana Luiza, eu tenho 18 anos e sou de Barra do Mendes, Bahia. Atualmente estou cursando o 4° ano de informática, na verdade, eu não gosto dessa área
      e não pretendo seguir nela, entrei no IFBA pelo ensino e pelas oportunidades, por esse motivo, muitas vezes me desespero com as matérias, especialmente as técnicas. 
-     Até agora, a matéria que eu achei mais divertida esté sendo a de programação web, com a professora Stéfani.
+     Até agora, a matéria que eu achei mais divertida está sendo a de programação web, com a professora Stéfani.
     </p>
-    <img src="IMG-20220515-WA0204.jpg" align="right">
  </div>
- 
+
+   <div id="foto"> <img src="aurora.jpg" >  </div>   
+   
 </body>
 </html>
