--- a/aaaaaa/ana.html
+++ b/aaaaaa/ana.html
@@ -18,7 +18,7 @@
     </p>
  </div>
 
-   <div id="foto"> <img src="aurora.jpg" >  </div>   
+   <div id="foto"> <img src="ana.jpg" >  </div>   
    
 </body>
 </html>
