--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
            <center> <h1> O IF está te deixando ablublu das ideias? vem cá que eu vou tentar te ajudar!</h1></center>
           <br>Olá galera, meu nome é <a link href="/aaaaaa/ana.html" style="color: white;"> <mark>Ana Luiza</mark\></a> e hoje eu vou falar um pouco sobre os meus habitos para ficar calma, tranquila, sussa, de boa na lagoa.</br>
           <p>A vida corrida de estudante chega a ser muito estressante, por isso, resolvi compartilhar um pouco dos meus habitos, talvez eles possam ser úteis para ajudar pessoas agitadas como eu.</p>
+        <p>(A maioria dessas fotos foi eu que tirei)</p>
         </div>
     
       <h3>Fazer caça-palavras</h3>
