--- a/aaaaaa/ana.html
+++ b/aaaaaa/ana.html
@@ -12,10 +12,10 @@
 <center>  <h1> Um pouco sobre mim </h1> </center> 
 
    <div id="texto">
-    <p> Meu nome é Ana Luiza, eu tenho 18 anos e sou de Barra do Mendes, Bahia. Atualmente estou cursando o 4° ano de informática, na verdade, eu não gosto dessa área
+    <h3><p> Meu nome é Ana Luiza, eu tenho 18 anos e sou de Barra do Mendes, Bahia. Atualmente estou cursando o 4° ano de informática, na verdade, eu não gosto dessa área
      e não pretendo seguir nela, entrei no IFBA pelo ensino e pelas oportunidades, por esse motivo, muitas vezes me desespero com as matérias, especialmente as técnicas. 
      Até agora, a matéria que eu achei mais divertida está sendo a de programação web, com a professora Stéfani.
-    </p>
+       </p></h3>
  </div>
 
    <div id="foto"> <img src="ana.jpeg" >  </div>   
