--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
                 padding-top: 10px;
                 padding-bottom: 10px;
             }
-            
+            h1{
+	            font-style:double struck;
+	        }
+            p{
+                font-style: italic;
+            }
         </style>
     </head>
    
