--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
                 padding-bottom: 10px;
             }
             h1{
-	            font-style:cornerstone;
+	            font-style:bold;
 	        }
             h3{
                 font-style: italic;
             }
-	    p{
-		font-style:Lucida Console ;
-            }
+	  
 			
         </style>
     </head>
