--- a/aaaaaa/ana.html
+++ b/aaaaaa/ana.html
@@ -9,7 +9,7 @@
  
 
  
-<center>  <h1> Um pouco sobre mim </h1> </center> 
+  <h1> Um pouco sobre mim </h1>
 
    <div id="texto">
     <h3><p> Meu nome é Ana Luiza, eu tenho 18 anos e sou de Barra do Mendes, Bahia. Atualmente estou cursando o 4° ano de informática, na verdade, eu não gosto dessa área
