--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Blogzinho da Ana </title>
         <style>
            body{ 
-                background-color: #01613B;
+               background-color: rgb( 205, 255, 209); 		 
+		background-image:url("flores.png");
                 color: white;
             } 
             div{ 
