--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 		 background-color: black;
                  color: white;
 		 padding:15px;
-		 margin:15px;	
+		 margin:10px;	
+		 border-radius: 25px;
 		}
 		    
 	  
