--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Blogzinho da Ana </title>
         <style>
            body{ 
-               background-color: rgb( 205, 255, 209); 		 
-		background-image:url("flores.png");
+               background-color: rgb(15, 128, 85); 		 
+		background-image:url("aaaaaa/flores.png");
                 color: white;
             } 
             div{ 
