--- a/aaaaaa/ana.html
+++ b/aaaaaa/ana.html
@@ -8,10 +8,10 @@
 <body>
  
 
- <header>
+ <div id= "titulo">
   <h1> Um pouco sobre mim </h1>
    </header>
-  <main>
+ </div>
    <div id="texto">
     <h3><p> Meu nome é Ana Luiza, eu tenho 18 anos e sou de Barra do Mendes, Bahia. Atualmente estou cursando o 4° ano de informática, na verdade, eu não gosto dessa área
      e não pretendo seguir nela, entrei no IFBA pelo ensino e pelas oportunidades, por esse motivo, muitas vezes me desespero com as matérias, especialmente as técnicas.
