--- a/aaaaaa/ana.html
+++ b/aaaaaa/ana.html
@@ -7,19 +7,22 @@
 </head>
 <body>
  
+<header>
+   <div id= "titulo">
+     <h1> Um pouco sobre mim </h1>  
+   </div>
+ </header>  
 
- <div id= "titulo">
-  <h1> Um pouco sobre mim </h1>
-   </header>
- </div>
-   <div id="texto">
-    <h3><p> Meu nome é Ana Luiza, eu tenho 18 anos e sou de Barra do Mendes, Bahia. Atualmente estou cursando o 4° ano de informática, na verdade, eu não gosto dessa área
-     e não pretendo seguir nela, entrei no IFBA pelo ensino e pelas oportunidades, por esse motivo, muitas vezes me desespero com as matérias, especialmente as técnicas.
-       <b>Quando começei essa pagina, eu achei que o ano ia melhorar, na verdade não to conseguindo colocar nada do que eu escrevi em pratica. ta dificil.
-       </p></h3>
- </div>
-
+   <div class= pai> 
+      <div id="texto">
+          <h3><p> Meu nome é Ana Luiza, eu tenho 18 anos e sou de Barra do Mendes, Bahia. Atualmente estou cursando o 4° ano de informática, na verdade, eu não gosto dessa área
+           e não pretendo seguir nela, entrei no IFBA pelo ensino e pelas oportunidades, por esse motivo, muitas vezes me desespero com as matérias, especialmente as técnicas.
+           <b>Quando começei essa pagina, eu achei que o ano ia melhorar, na verdade não to conseguindo colocar nada do que eu escrevi em pratica. ta dificil.
+          </p></h3>
+      </div>
+   
    <div id="foto"> <img src="ana.jpeg" >  </div>   
-   </main>
+  </div> 
+
 </body>
 </html>
