--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
 	  <p>Olá galera, meu nome é <a link href="/aaaaaa/ana.html" style="color: white;"> <mark>Ana Luiza</mark\></a> e hoje eu vou falar um pouco sobre os meus habitos para ficar calma, tranquila, sussa, de boa na lagoa.</p>
           <p>A vida corrida de estudante chega a ser muito estressante, por isso, resolvi compartilhar um pouco dos meus habitos, talvez eles possam ser úteis para ajudar pessoas agitadas como eu.</p>
         <p>(A maioria dessas fotos foi eu que tirei)</p>
+		 <p><del> Não to conseguindo colocar nada aqui em pratica, socorro</del></p>
        </header> 
 	<div>
       <h3>Fazer caça-palavras</h3>
          <p>Sim, eu sei, parece coisa de velho, mas é um passatempo  muito mais saudável do que ficar nas redes sociais, particularmente eu acho bastante divertido.</p>
-            <center><img src="livro.gif" width="654"; height="368";> </center>
-        </div>
+               </div> 
+	    <center><img src="livro.gif" width="654"; height="368";> </center>
+   
 	    
         <div>
         <h3>Ouvir musica</h3>
