--- a/pagina/ana.html
+++ b/pagina/ana.html
@@ -3,7 +3,7 @@
 <head>
    <link rel="icon" href="/imagens/PeepoGlad.png" type="image/x-icon">
        <title>Sobre mim </title>
-       <link rel="stylesheet" href="style.css">
+       <link rel="stylesheet" href="/pagina/style.css">
 </head>
 <body>
  
