--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                  
          <header>
 	   <center> <h1> O IF está te deixando ablublu das ideias? vem cá que eu vou tentar te ajudar!</h1></center>    
-	  <p>Olá galera, meu nome é <a link href="ana.html" style="color: white;"> <mark>Ana Luiza</mark\></a> e hoje eu vou falar um pouco sobre algumas coisas que gosto de fazer quando tenho tempo livre.</p>
+	  <p>Olá galera, meu nome é <a link href="/pagina/ana.html" style="color: white;"> <mark>Ana Luiza</mark\></a> e hoje eu vou falar um pouco sobre algumas coisas que gosto de fazer quando tenho tempo livre.</p>
           <p>A vida corrida de estudante chega a ser muito estressante, por isso, resolvi compartilhar um pouco dos meus hobbies, não que eu os faça com frequencia, mas tamo ae.</p>
         <p>(A maioria dessas fotos foi eu que tirei)</p>
        </header> 
