--- a/pagina/ana.html
+++ b/pagina/ana.html
@@ -15,10 +15,14 @@
 
    <div class= pai> 
       <div id="texto">
-          <h3><p> Meu nome é Ana Luiza, eu tenho 18 anos e sou de Barra do Mendes, Bahia. Atualmente estou cursando o 4° ano de informática, na verdade, eu não gosto dessa área
-           e não pretendo seguir nela, entrei no IFBA pelo ensino e pelas oportunidades, por esse motivo, muitas vezes me desespero com as matérias, especialmente as técnicas.
-           <b>Quando começei essa pagina, eu achei que o ano ia melhorar, na verdade não to conseguindo colocar nada do que eu escrevi em pratica. ta dificil. 
-            Alem disso, me faltou tempo pra cuidar dessa pagina. Ate tentei criar outra mais organizada, porem nao consegui fazer ela funcionar.
+          <h3><p> Meu nome é Ana Luiza, eu tenho 18 anos e sou de Barra do Mendes, Bahia. <b>
+          Atualmente estou cursando o 4° ano de informática, na verdade, eu não gosto dessa área<b>
+           e não pretendo seguir nela, entrei no IFBA pelo ensino e pelas oportunidades, <b>
+              por esse motivo, muitas vezes me desespero com as matérias, especialmente as técnicas.
+           <b>Quando começei essa pagina, eu achei que o ano ia melhorar, <b>
+              na verdade não to conseguindo colocar nada do que eu escrevi em pratica. ta dificil. 
+            Alem disso, me faltou tempo pra cuidar dessa pagina. Ate tentei criar outra mais organizada,<b>
+               porem nao consegui fazer ela funcionar.
           </p></h3>
       </div>
    
